--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="button">Button</string>
     <string name="actividad">Actividad</string>
     <string name="tarea">Tarea</string>
+    <string name="volver">Volver</string>
 </resources>
